[gd_scene load_steps=9 format=3 uid="uid://q7ihls12mnkk"]

[ext_resource type="Script" path="res://scripts/spirit_bullet.gd" id="1_cmrd2"]
[ext_resource type="Texture2D" uid="uid://bipm3segv8puk" path="res://assets/Enemy Movement Sprites.png" id="2_87gcm"]


[sub_resource type="RectangleShape2D" id="RectangleShape2D_qa21a"]
size = Vector2(9.5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_eldmp"]
atlas = ExtResource("2_87gcm")
region = Rect2(48, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mdvu"]
atlas = ExtResource("2_87gcm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4xf3"]
atlas = ExtResource("2_87gcm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4adnr"]
atlas = ExtResource("2_87gcm")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_eivrv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eldmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mdvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4xf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4adnr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bullet" type="Area2D"]
script = ExtResource("1_cmrd2")
metadata/Delete = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.75, 0.5)
shape = SubResource("RectangleShape2D_qa21a")
metadata/Delete = false

[node name="HomeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 1)
rotation = 3.14159
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_eivrv")
frame = 2
frame_progress = 0.110478

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_enter"]
[connection signal="timeout" from="HomeTimer" to="." method="_on_home_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
